--- a/assignment10/Home_page.css
+++ b/assignment10/Home_page.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url(gradient-background-02.jpg);
+    background-image: url(coral\ and\ blue\ snow\ pic.JPG);
     background-repeat: repeat;
 
 }
@@ -40,7 +40,8 @@ html{
         margin: 5em auto;
         padding: 0;
         width: 1050px;
-        border: 4px solid #0062a9;
+        border: 5px solid  #3fafff;
+        border-radius: 30px;
         background-color: #ffffff;
         display: grid;
         grid-template-columns: repeat(12) 1fr;
@@ -50,23 +51,85 @@ html{
             margin: 10em auto;
             padding: 0;
             width: 1050px;
-            border: 2px solid #0062a9;
-            background-color: #ffffff;
             display: grid;
             grid-template-columns: repeat(12,1fr);
         
             }
+
+            .videocontainer{
+                grid-column: span 7;
+            }
             .videobox{
-                grid-column: span 8;
-                border: 2px solid #0062a9; 
+                grid-column: span 7;
+                background-color: #ffffff;
+                border: 5px solid  #3fafff; 
+                border-radius: 30px;
+               
         
             }
             .title {
-                grid-column: span 4;
+                grid-column: span 5;
                 padding: 0;
-                border: 2px solid #0062a9;
+                border: 5px solid  #3fafff;
+                border-radius: 30px;
                 background-color: #ffffff;
+                margin-left: 50px;
+                display:grid;
+                align-self: center;
+                justify-content: center;
+                font-family: helvetica, sans-serif;
+                font-size: larger;
+                font-style:normal;
+                text-align: center;
+                
             }
+            .simpletitle{
+                font-family: helvetica, sans-serif;
+                font-size: larger;
+                font-style:normal;
+                padding-left: 2x;  
+            }
+
+          
+        .invisibox{
+             display:grid;
+             margin: 5em 10px 10px 100px ;
+             padding: 0;
+             width: 900px;
+             border: 0px solid #0062a9;
+             grid-template-columns: repeat(12, 1fr);
+             grid-gap: 20px;
+         }
+         .music{
+            color:#ffffff;
+            grid-column: span 12;
+            margin-left: 20px;
+            font-family: helvetica, sans-serif;
+            font-size: 20px;
+            font-style:normal;
+         }
+          .line{
+             
+             border: 3px solid #3fafff;
+             grid-column: span 9;
+             align-self: center;
+             border-radius: 30px;
+             height: 0px;
+        
+          }
+         .playbutton {
+             padding: 10px;
+             width: 250px;
+             height: 250px;
+             border: 10px solid #3fafff;
+             background-color: #ffffff;
+             color: white;
+             border-radius: 500px;
+             margin-left: 0px;
+             display: inline-block;
+        }
+
+
         .box3 {
              margin: 10em auto;
              padding: 0;
@@ -74,18 +137,28 @@ html{
              border: 0px solid #0062a9;
              display: grid;
              grid-template-columns: repeat(12,1fr);
+             
             }
             .mebox{
                 grid-column: span 7;
-                border: 4px solid #0062a9;
+                border: 5px solid  #3fafff;
                 background-color: #ffffff;
-            
+                border-radius: 30px;
+                display:grid;
+                justify-content: center;
+                font-family: helvetica, sans-serif;
+                font-size: larger;
+                font-style:normal;
             }
+           
             .mephoto {
                 grid-column: span 5;
                 padding: 0;
-                border: 4px solid #0062a9;
+                border: 5px solid  #3fafff;
                 background-color: #ffffff;
+                border-radius: 30px;
                 margin-left: 100px;
             }
-            
+    .photoshapper {
+        border-radius: 25px;
+    }
