--- a/assignment10/Home_page.css
+++ b/assignment10/Home_page.css
@@ -110,11 +110,11 @@ html{
          }
           .line{
              
-             border: 3px solid #3fafff;
+          
              grid-column: span 9;
              align-self: center;
-             border-radius: 30px;
-             height: 0px;
+             
+             
         
           }
          .playbutton {
@@ -122,7 +122,8 @@ html{
              width: 250px;
              height: 250px;
              border: 10px solid #3fafff;
-             background-color: #ffffff;
+             background-image: url(spiral.png);
+             
              color: white;
              border-radius: 500px;
              margin-left: 0px;
