--- a/assignment10/Home_page.css
+++ b/assignment10/Home_page.css
@@ -40,7 +40,6 @@ html{
         margin: 5em auto;
         padding: 0;
         width: 1050px;
-        border: 5px solid  #3fafff;
         border-radius: 30px;
         background-color: #ffffff;
         display: grid;
@@ -103,31 +102,32 @@ html{
          .music{
             color:#ffffff;
             grid-column: span 12;
-            margin-left: 20px;
-           
+            margin-left: 30px;
+            align-self: center;
             font-size: 20px;
             font-style:normal;
          }
           .line{
              
           
-             grid-column: span 9;
+             grid-column: span 12;
              align-self: center;
-             
+             margin-left:115px;
+             margin-top: 50;
              
         
           }
          .playbutton {
-             padding: 10px;
+            grid-column: span 12;
+             padding: 0px;
              width: 250px;
              height: 250px;
-             border: 10px solid #3fafff;
-             background-image: url(spiral.png);
-             
+             border: 8px solid #3fafff;
              color: white;
              border-radius: 500px;
              margin-left: 0px;
              display: inline-block;
+             align-self: center;
         }
 
 
@@ -147,19 +147,18 @@ html{
                 border-radius: 30px;
                 display:grid;
                 justify-content: center;
-                
-                font-size: larger;
-                font-style:normal;
+                padding: 20px;
+              
             }
            
             .mephoto {
                 grid-column: span 5;
                 padding: 0;
-                border: 5px solid  #3fafff;
-                background-color: #ffffff;
                 border-radius: 30px;
                 margin-left: 100px;
             }
+            
     .photoshapper {
         border-radius: 25px;
+        border: 5px solid  #3fafff;
     }
